[package]
name = "shared"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"

[dependencies]
anyhow.workspace = true
bincode = "1.3.3"
crux_core = { version = "0.3", path = "../../../crux_core" }
crux_http = { version = "0.2", path = "../../../crux_http" }
crux_kv = { version = "0.1", path = "../../../crux_kv" }
crux_macros = { 