[package]
name = "shared"
version = "0.1.0"
# FIXME - wasm-pack doesn't like these. Re-enable when it does
# authors.workspace = true
# repository.workspace = true
edition.workspace = true
# license.workspace = true
# keywords.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["lib", "stat